// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppComponent can navigate to the to "" because the user is logged in so it should render the LandingPage 1`] = `
<div
  id="root7"
  ng-version="18.2.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="p-4 flex justify-center"
      >
        <div
          class="w-full space-y-4 flex flex-col justify-between items-center md:w-3/4 md:flex-row md:space-y-0"
        >
          <app-logo
            ng-reflect-vm="[object Object]"
          >
            <a
              href=""
            >
              <img
                alt="logo"
                class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
                src="assets/phoenix.jpg"
              />
            </a>
          </app-logo>
          <app-nav>
            <nav
              class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
            >
              <!--container-->
              <button
                mat-icon-button=""
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
              </button>
            </nav>
          </app-nav>
        </div>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow"
    >
      <router-outlet />
      <app-landing-page>
        <app-hero
          ng-reflect-vm="[object Object]"
        >
          <section
            class="mt-10 h-[75vh] flex flex-col justify-center bg-no-repeat bg-right-top bg-cover sm:space-y-10 md:ml-60 transition-all"
            style="background-image: url(assets/farming.jpg);"
          >
            <div
              class="flex flex-col mx-10 space-y-5"
            >
              <h1>
                LandingPage.hero.title
              </h1>
              <p>
                LandingPage.hero.description
              </p>
              <div
                class="flex flex-col space-y-5 sm:flex-row sm:space-y-0 space-x-0 sm:space-x-5"
              >
                <a
                  class="btn btn-primary"
                  href=""
                >
                  LandingPage.hero.primaryButtonLabel
                </a>
                <a
                  class="btn btn-default"
                  href=""
                >
                  LandingPage.hero.secondaryButtonTitleLabel
                </a>
              </div>
            </div>
          </section>
          <!--container-->
        </app-hero>
        <!--container-->
        <app-frame
          id="products"
          ng-reflect-vm="[object Object]"
        >
          <section
            class="flex flex-col gap-y-10 py-20 mx-5 sm:mx-20 lg:mx-40"
          >
            <h2>
              LandingPage.frames.0.title
            </h2>
            <app-product-list>
              <div
                class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
              >
                <app-product-item
                  class="h-full"
                  ng-reflect-router-link="products,1"
                  ng-reflect-vm="[object Object]"
                  tabindex="0"
                >
                  <a
                    class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
                  >
                    <img
                      alt="LandingPage.products.0.title"
                      class="w-auto h-auto object-cover rounded-md"
                      src="assets/lepke.jpg"
                    />
                    <h3
                      class="font-bold text-xl sm:text-2xl mt-4"
                    >
                      LandingPage.products.0.title
                    </h3>
                    <p
                      class="mt-4"
                    >
                      LandingPage.products.0.description
                    </p>
                  </a>
                  <!--container-->
                </app-product-item>
                <app-product-item
                  class="h-full"
                  ng-reflect-router-link="products,2"
                  ng-reflect-vm="[object Object]"
                  tabindex="0"
                >
                  <a
                    class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
                  >
                    <img
                      alt="LandingPage.products.1.title"
                      class="w-auto h-auto object-cover rounded-md"
                      src="assets/lepke.jpg"
                    />
                    <h3
                      class="font-bold text-xl sm:text-2xl mt-4"
                    >
                      LandingPage.products.1.title
                    </h3>
                    <p
                      class="mt-4"
                    >
                      LandingPage.products.1.description
                    </p>
                  </a>
                  <!--container-->
                </app-product-item>
                <app-product-item
                  class="h-full"
                  ng-reflect-router-link="products,3"
                  ng-reflect-vm="[object Object]"
                  tabindex="0"
                >
                  <a
                    class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
                  >
                    <img
                      alt="LandingPage.products.2.title"
                      class="w-auto h-auto object-cover rounded-md"
                      src="assets/lepke.jpg"
                    />
                    <h3
                      class="font-bold text-xl sm:text-2xl mt-4"
                    >
                      LandingPage.products.2.title
                    </h3>
                    <p
                      class="mt-4"
                    >
                      LandingPage.products.2.description
                    </p>
                  </a>
                  <!--container-->
                </app-product-item>
                <!--container-->
              </div>
            </app-product-list>
          </section>
          <!--container-->
        </app-frame>
        <!--ng-container-->
        <app-frame
          id="partners"
          ng-reflect-vm="[object Object]"
        >
          <section
            class="flex flex-col gap-y-10 py-20 mx-5 sm:mx-20 lg:mx-40"
          >
            <h2>
              LandingPage.frames.1.title
            </h2>
            <app-partner-list>
              <div
                class="flex flex-wrap flex-row justify-center ease-in-out transition-all"
              />
            </app-partner-list>
            <!--container-->
            <swiper-container
              autoplay-delay="2500"
              autoplay-disable-on-interaction="false"
              class="w-full sm:w-2/3 md:w-1/2"
              keyboard="true"
              pagination="true"
              pagination-clickable="true"
              pagination-dynamic-bullets="true"
              space-between="30"
            >
              <swiper-slide
                class="pb-10"
              >
                <app-testimonial-item
                  ng-reflect-vm="[object Object]"
                >
                  <div
                    class="p-6 full mx-auto text-center rounded-md shadow transition-all cursor-pointer"
                  >
                    <p
                      class="text-lg italic text-gray-700"
                    >
                      "LandingPage.testimonials.0.message"
                    </p>
                    <p
                      class="font-semibold text-gray-900 mt-4"
                    >
                      John Doe
                    </p>
                    <p
                      class="text-gray-500"
                    >
                      LandingPage.testimonials.0.roleAndCompany
                    </p>
                  </div>
                  <!--container-->
                </app-testimonial-item>
              </swiper-slide>
              <swiper-slide
                class="pb-10"
              >
                <app-testimonial-item
                  ng-reflect-vm="[object Object]"
                >
                  <div
                    class="p-6 full mx-auto text-center rounded-md shadow transition-all cursor-pointer"
                  >
                    <p
                      class="text-lg italic text-gray-700"
                    >
                      "LandingPage.testimonials.1.message"
                    </p>
                    <p
                      class="font-semibold text-gray-900 mt-4"
                    >
                      Jane Smith
                    </p>
                    <p
                      class="text-gray-500"
                    >
                      LandingPage.testimonials.1.roleAndCompany
                    </p>
                  </div>
                  <!--container-->
                </app-testimonial-item>
              </swiper-slide>
              <swiper-slide
                class="pb-10"
              >
                <app-testimonial-item
                  ng-reflect-vm="[object Object]"
                >
                  <div
                    class="p-6 full mx-auto text-center rounded-md shadow transition-all cursor-pointer"
                  >
                    <p
                      class="text-lg italic text-gray-700"
                    >
                      "LandingPage.testimonials.2.message"
                    </p>
                    <p
                      class="font-semibold text-gray-900 mt-4"
                    >
                      Emily Johnson
                    </p>
                    <p
                      class="text-gray-500"
                    >
                      LandingPage.testimonials.2.roleAndCompany
                    </p>
                  </div>
                  <!--container-->
                </app-testimonial-item>
              </swiper-slide>
              <swiper-slide
                class="pb-10"
              >
                <app-testimonial-item
                  ng-reflect-vm="[object Object]"
                >
                  <div
                    class="p-6 full mx-auto text-center rounded-md shadow transition-all cursor-pointer"
                  >
                    <p
                      class="text-lg italic text-gray-700"
                    >
                      "LandingPage.testimonials.3.message"
                    </p>
                    <p
                      class="font-semibold text-gray-900 mt-4"
                    >
                      Emily Johnson
                    </p>
                    <p
                      class="text-gray-500"
                    >
                      LandingPage.testimonials.3.roleAndCompany
                    </p>
                  </div>
                  <!--container-->
                </app-testimonial-item>
              </swiper-slide>
              <swiper-slide
                class="pb-10"
              >
                <app-testimonial-item
                  ng-reflect-vm="[object Object]"
                >
                  <div
                    class="p-6 full mx-auto text-center rounded-md shadow transition-all cursor-pointer"
                  >
                    <p
                      class="text-lg italic text-gray-700"
                    >
                      "LandingPage.testimonials.4.message"
                    </p>
                    <p
                      class="font-semibold text-gray-900 mt-4"
                    >
                      Emily Johnson
                    </p>
                    <p
                      class="text-gray-500"
                    >
                      LandingPage.testimonials.4.roleAndCompany
                    </p>
                  </div>
                  <!--container-->
                </app-testimonial-item>
              </swiper-slide>
              <swiper-slide
                class="pb-10"
              >
                <app-testimonial-item
                  ng-reflect-vm="[object Object]"
                >
                  <div
                    class="p-6 full mx-auto text-center rounded-md shadow transition-all cursor-pointer"
                  >
                    <p
                      class="text-lg italic text-gray-700"
                    >
                      "LandingPage.testimonials.5.message"
                    </p>
                    <p
                      class="font-semibold text-gray-900 mt-4"
                    >
                      Emily Johnson
                    </p>
                    <p
                      class="text-gray-500"
                    >
                      LandingPage.testimonials.5.roleAndCompany
                    </p>
                  </div>
                  <!--container-->
                </app-testimonial-item>
              </swiper-slide>
              <!--container-->
            </swiper-container>
            <!--container-->
          </section>
          <!--container-->
        </app-frame>
        <!--ng-container-->
        <!--container-->
        <!--container-->
        <!--container-->
        <!--container-->
        <!--container-->
      </app-landing-page>
      <!--container-->
    </div>
  </div>
</div>
`;

exports[`AppComponent can navigate to the to "/products" because the user is logged in so it should render the ProductsPage 1`] = `
<div
  id="root8"
  ng-version="18.2.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="p-4 flex justify-center"
      >
        <div
          class="w-full space-y-4 flex flex-col justify-between items-center md:w-3/4 md:flex-row md:space-y-0"
        >
          <app-logo
            ng-reflect-vm="[object Object]"
          >
            <a
              href=""
            >
              <img
                alt="logo"
                class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
                src="assets/phoenix.jpg"
              />
            </a>
          </app-logo>
          <app-nav>
            <nav
              class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
            >
              <!--container-->
              <button
                mat-icon-button=""
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
              </button>
            </nav>
          </app-nav>
        </div>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow"
    >
      <router-outlet />
      <app-products-page>
        <app-frame
          ng-reflect-vm="[object Object]"
        >
          <section
            class="flex flex-col gap-y-10 py-20 mx-5 sm:mx-20 lg:mx-40"
          >
            <h2>
              LandingPage.frames.0.title
            </h2>
            <app-product-list>
              <div
                class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
              >
                <app-product-item
                  class="h-full"
                  ng-reflect-router-link="1"
                  ng-reflect-vm="[object Object]"
                  tabindex="0"
                >
                  <a
                    class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
                  >
                    <img
                      alt="LandingPage.products.0.title"
                      class="w-auto h-auto object-cover rounded-md"
                      src="assets/lepke.jpg"
                    />
                    <h3
                      class="font-bold text-xl sm:text-2xl mt-4"
                    >
                      LandingPage.products.0.title
                    </h3>
                    <p
                      class="mt-4"
                    >
                      LandingPage.products.0.description
                    </p>
                  </a>
                  <!--container-->
                </app-product-item>
                <app-product-item
                  class="h-full"
                  ng-reflect-router-link="2"
                  ng-reflect-vm="[object Object]"
                  tabindex="0"
                >
                  <a
                    class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
                  >
                    <img
                      alt="LandingPage.products.1.title"
                      class="w-auto h-auto object-cover rounded-md"
                      src="assets/lepke.jpg"
                    />
                    <h3
                      class="font-bold text-xl sm:text-2xl mt-4"
                    >
                      LandingPage.products.1.title
                    </h3>
                    <p
                      class="mt-4"
                    >
                      LandingPage.products.1.description
                    </p>
                  </a>
                  <!--container-->
                </app-product-item>
                <app-product-item
                  class="h-full"
                  ng-reflect-router-link="3"
                  ng-reflect-vm="[object Object]"
                  tabindex="0"
                >
                  <a
                    class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
                  >
                    <img
                      alt="LandingPage.products.2.title"
                      class="w-auto h-auto object-cover rounded-md"
                      src="assets/lepke.jpg"
                    />
                    <h3
                      class="font-bold text-xl sm:text-2xl mt-4"
                    >
                      LandingPage.products.2.title
                    </h3>
                    <p
                      class="mt-4"
                    >
                      LandingPage.products.2.description
                    </p>
                  </a>
                  <!--container-->
                </app-product-item>
                <!--container-->
              </div>
            </app-product-list>
          </section>
          <!--container-->
        </app-frame>
        <!--container-->
      </app-products-page>
      <!--container-->
    </div>
  </div>
</div>
`;

exports[`AppComponent can navigate to the to "/products/id" because the user is logged in so it should render the ProductsPage 1`] = `
<div
  id="root9"
  ng-version="18.2.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="p-4 flex justify-center"
      >
        <div
          class="w-full space-y-4 flex flex-col justify-between items-center md:w-3/4 md:flex-row md:space-y-0"
        >
          <app-logo
            ng-reflect-vm="[object Object]"
          >
            <a
              href=""
            >
              <img
                alt="logo"
                class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
                src="assets/phoenix.jpg"
              />
            </a>
          </app-logo>
          <app-nav>
            <nav
              class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
            >
              <!--container-->
              <button
                mat-icon-button=""
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
              </button>
            </nav>
          </app-nav>
        </div>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow"
    >
      <router-outlet />
      <app-products-page>
        <app-frame
          ng-reflect-vm="[object Object]"
        >
          <section
            class="flex flex-col gap-y-10 py-20 mx-5 sm:mx-20 lg:mx-40"
          >
            <h2>
              LandingPage.frames.0.title
            </h2>
            <app-product-list>
              <div
                class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mt-10 transition-all"
              >
                <app-product-item
                  class="h-full"
                  ng-reflect-router-link="1"
                  ng-reflect-vm="[object Object]"
                  tabindex="0"
                >
                  <a
                    class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
                  >
                    <img
                      alt="LandingPage.products.0.title"
                      class="w-auto h-auto object-cover rounded-md"
                      src="assets/lepke.jpg"
                    />
                    <h3
                      class="font-bold text-xl sm:text-2xl mt-4"
                    >
                      LandingPage.products.0.title
                    </h3>
                    <p
                      class="mt-4"
                    >
                      LandingPage.products.0.description
                    </p>
                  </a>
                  <!--container-->
                </app-product-item>
                <app-product-item
                  class="h-full"
                  ng-reflect-router-link="2"
                  ng-reflect-vm="[object Object]"
                  tabindex="0"
                >
                  <a
                    class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
                  >
                    <img
                      alt="LandingPage.products.1.title"
                      class="w-auto h-auto object-cover rounded-md"
                      src="assets/lepke.jpg"
                    />
                    <h3
                      class="font-bold text-xl sm:text-2xl mt-4"
                    >
                      LandingPage.products.1.title
                    </h3>
                    <p
                      class="mt-4"
                    >
                      LandingPage.products.1.description
                    </p>
                  </a>
                  <!--container-->
                </app-product-item>
                <app-product-item
                  class="h-full"
                  ng-reflect-router-link="3"
                  ng-reflect-vm="[object Object]"
                  tabindex="0"
                >
                  <a
                    class="cursor-pointer block p-4 w-full h-full rounded-md shadow-md hover:shadow-xl transition-all"
                  >
                    <img
                      alt="LandingPage.products.2.title"
                      class="w-auto h-auto object-cover rounded-md"
                      src="assets/lepke.jpg"
                    />
                    <h3
                      class="font-bold text-xl sm:text-2xl mt-4"
                    >
                      LandingPage.products.2.title
                    </h3>
                    <p
                      class="mt-4"
                    >
                      LandingPage.products.2.description
                    </p>
                  </a>
                  <!--container-->
                </app-product-item>
                <!--container-->
              </div>
            </app-product-list>
          </section>
          <!--container-->
        </app-frame>
        <!--container-->
      </app-products-page>
      <!--container-->
    </div>
  </div>
</div>
`;

exports[`AppComponent should navigate back to the LoginPage after navigate to "" because the user is not logged in 1`] = `
<div
  id="root4"
  ng-version="18.2.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="p-4 flex justify-center"
      >
        <div
          class="w-full space-y-4 flex flex-col justify-between items-center md:w-3/4 md:flex-row md:space-y-0"
        >
          <app-logo
            ng-reflect-vm="[object Object]"
          >
            <a
              href=""
            >
              <img
                alt="logo"
                class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
                src="assets/phoenix.jpg"
              />
            </a>
          </app-logo>
          <app-nav>
            <nav
              class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
            >
              <!--container-->
              <button
                mat-icon-button=""
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
              </button>
            </nav>
          </app-nav>
        </div>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow"
    >
      <router-outlet />
      <app-login-page>
        <div
          class="flex items-center justify-center min-h-screen"
        >
          <app-login-form
            ng-reflect-vm="[object Object]"
          >
            <div
              class="flex flex-col md:flex-row-reverse h-auto md:h-[75vh] md:w-[100vh] max-w-4xl mx-5 md:mx-0"
            >
              <div
                class="bg-cover bg-no-repeat rounded-2xl h-48 md:h-full md:w-1/2"
                style="background-image: url(assets/farming.jpg);"
              />
              <div
                class="flex flex-col items-center justify-center p-5 text-center w-full h-full md:w-1/2"
              >
                <h3>
                   LoginPage.loginForm.title 
                </h3>
                <p>
                  LoginPage.loginForm.description
                </p>
                <div
                  class="w-full"
                >
                  <form
                    class="w-full max-w-md mx-auto ng-untouched ng-pristine ng-invalid"
                    ng-reflect-form="[object Object]"
                    novalidate=""
                  >
                    <input
                      class="block rounded-full py-4 px-5 mb-5 w-full bg-gray-200 ng-untouched ng-pristine ng-invalid"
                      formcontrolname="email"
                      id="email"
                      ng-reflect-name="email"
                      placeholder="Email"
                      type="email"
                    />
                    <input
                      class="block rounded-full py-4 px-5 mb-5 w-full bg-gray-200 ng-untouched ng-pristine ng-invalid"
                      formcontrolname="password"
                      id="password"
                      ng-reflect-name="password"
                      placeholder="Password"
                      type="password"
                    />
                    <button
                      class="btn btn-primary disabled"
                      disabled=""
                      ng-reflect-ng-class="disabled"
                      type="submit"
                    >
                       LOGINPAGE.LOGINFORM.BUTTONTITLE 
                    </button>
                  </form>
                </div>
              </div>
            </div>
          </app-login-form>
        </div>
        <!--container-->
      </app-login-page>
      <!--container-->
    </div>
  </div>
</div>
`;

exports[`AppComponent should navigate back to the LoginPage after navigate to "/products" because the user is not logged in 1`] = `
<div
  id="root5"
  ng-version="18.2.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="p-4 flex justify-center"
      >
        <div
          class="w-full space-y-4 flex flex-col justify-between items-center md:w-3/4 md:flex-row md:space-y-0"
        >
          <app-logo
            ng-reflect-vm="[object Object]"
          >
            <a
              href=""
            >
              <img
                alt="logo"
                class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
                src="assets/phoenix.jpg"
              />
            </a>
          </app-logo>
          <app-nav>
            <nav
              class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
            >
              <!--container-->
              <button
                mat-icon-button=""
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
              </button>
            </nav>
          </app-nav>
        </div>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow"
    >
      <router-outlet />
      <app-login-page>
        <div
          class="flex items-center justify-center min-h-screen"
        >
          <app-login-form
            ng-reflect-vm="[object Object]"
          >
            <div
              class="flex flex-col md:flex-row-reverse h-auto md:h-[75vh] md:w-[100vh] max-w-4xl mx-5 md:mx-0"
            >
              <div
                class="bg-cover bg-no-repeat rounded-2xl h-48 md:h-full md:w-1/2"
                style="background-image: url(assets/farming.jpg);"
              />
              <div
                class="flex flex-col items-center justify-center p-5 text-center w-full h-full md:w-1/2"
              >
                <h3>
                   LoginPage.loginForm.title 
                </h3>
                <p>
                  LoginPage.loginForm.description
                </p>
                <div
                  class="w-full"
                >
                  <form
                    class="w-full max-w-md mx-auto ng-untouched ng-pristine ng-invalid"
                    ng-reflect-form="[object Object]"
                    novalidate=""
                  >
                    <input
                      class="block rounded-full py-4 px-5 mb-5 w-full bg-gray-200 ng-untouched ng-pristine ng-invalid"
                      formcontrolname="email"
                      id="email"
                      ng-reflect-name="email"
                      placeholder="Email"
                      type="email"
                    />
                    <input
                      class="block rounded-full py-4 px-5 mb-5 w-full bg-gray-200 ng-untouched ng-pristine ng-invalid"
                      formcontrolname="password"
                      id="password"
                      ng-reflect-name="password"
                      placeholder="Password"
                      type="password"
                    />
                    <button
                      class="btn btn-primary disabled"
                      disabled=""
                      ng-reflect-ng-class="disabled"
                      type="submit"
                    >
                       LOGINPAGE.LOGINFORM.BUTTONTITLE 
                    </button>
                  </form>
                </div>
              </div>
            </div>
          </app-login-form>
        </div>
        <!--container-->
      </app-login-page>
      <!--container-->
    </div>
  </div>
</div>
`;

exports[`AppComponent should navigate back to the LoginPage after navigate to "/products/id" because the user is not logged in 1`] = `
<div
  id="root6"
  ng-version="18.2.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="p-4 flex justify-center"
      >
        <div
          class="w-full space-y-4 flex flex-col justify-between items-center md:w-3/4 md:flex-row md:space-y-0"
        >
          <app-logo
            ng-reflect-vm="[object Object]"
          >
            <a
              href=""
            >
              <img
                alt="logo"
                class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
                src="assets/phoenix.jpg"
              />
            </a>
          </app-logo>
          <app-nav>
            <nav
              class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
            >
              <!--container-->
              <button
                mat-icon-button=""
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
              </button>
            </nav>
          </app-nav>
        </div>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow"
    >
      <router-outlet />
      <app-login-page>
        <div
          class="flex items-center justify-center min-h-screen"
        >
          <app-login-form
            ng-reflect-vm="[object Object]"
          >
            <div
              class="flex flex-col md:flex-row-reverse h-auto md:h-[75vh] md:w-[100vh] max-w-4xl mx-5 md:mx-0"
            >
              <div
                class="bg-cover bg-no-repeat rounded-2xl h-48 md:h-full md:w-1/2"
                style="background-image: url(assets/farming.jpg);"
              />
              <div
                class="flex flex-col items-center justify-center p-5 text-center w-full h-full md:w-1/2"
              >
                <h3>
                   LoginPage.loginForm.title 
                </h3>
                <p>
                  LoginPage.loginForm.description
                </p>
                <div
                  class="w-full"
                >
                  <form
                    class="w-full max-w-md mx-auto ng-untouched ng-pristine ng-invalid"
                    ng-reflect-form="[object Object]"
                    novalidate=""
                  >
                    <input
                      class="block rounded-full py-4 px-5 mb-5 w-full bg-gray-200 ng-untouched ng-pristine ng-invalid"
                      formcontrolname="email"
                      id="email"
                      ng-reflect-name="email"
                      placeholder="Email"
                      type="email"
                    />
                    <input
                      class="block rounded-full py-4 px-5 mb-5 w-full bg-gray-200 ng-untouched ng-pristine ng-invalid"
                      formcontrolname="password"
                      id="password"
                      ng-reflect-name="password"
                      placeholder="Password"
                      type="password"
                    />
                    <button
                      class="btn btn-primary disabled"
                      disabled=""
                      ng-reflect-ng-class="disabled"
                      type="submit"
                    >
                       LOGINPAGE.LOGINFORM.BUTTONTITLE 
                    </button>
                  </form>
                </div>
              </div>
            </div>
          </app-login-form>
        </div>
        <!--container-->
      </app-login-page>
      <!--container-->
    </div>
  </div>
</div>
`;

exports[`AppComponent should not render <app-nav-item> when there is no item provided 1`] = `
<div
  id="root1"
  ng-version="18.2.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="p-4 flex justify-center"
      >
        <div
          class="w-full space-y-4 flex flex-col justify-between items-center md:w-3/4 md:flex-row md:space-y-0"
        >
          <app-logo
            ng-reflect-vm="[object Object]"
          >
            <a
              href=""
            >
              <img
                alt="logo"
                class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
                src="assets/phoenix.jpg"
              />
            </a>
          </app-logo>
          <app-nav>
            <nav
              class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
            >
              <!--container-->
              <button
                mat-icon-button=""
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
              </button>
            </nav>
          </app-nav>
        </div>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow"
    >
      <router-outlet />
      <!--container-->
    </div>
  </div>
</div>
`;

exports[`AppComponent should not render the template when the VM is not provided 1`] = `
<div
  id="root0"
  ng-version="18.2.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <!--container-->
    <div
      class="flex-grow"
    >
      <router-outlet />
      <!--container-->
    </div>
  </div>
</div>
`;

exports[`AppComponent should render 1 <app-nav-item> when 1 item is provided 1`] = `
<div
  id="root2"
  ng-version="18.2.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="p-4 flex justify-center"
      >
        <div
          class="w-full space-y-4 flex flex-col justify-between items-center md:w-3/4 md:flex-row md:space-y-0"
        >
          <app-logo
            ng-reflect-vm="[object Object]"
          >
            <a
              href=""
            >
              <img
                alt="logo"
                class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
                src="assets/phoenix.jpg"
              />
            </a>
          </app-logo>
          <app-nav>
            <nav
              class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
            >
              <app-nav-item
                ng-reflect-vm="[object Object]"
              >
                <a
                  class="sm:hover:text-gray-400 duration-150 cursor-pointer"
                  href=""
                  rel="null"
                  target="null"
                >
                  AppComponent.navItems.0.title
                </a>
              </app-nav-item>
              <!--container-->
              <button
                mat-icon-button=""
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
              </button>
            </nav>
          </app-nav>
        </div>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow"
    >
      <router-outlet />
      <!--container-->
    </div>
  </div>
</div>
`;

exports[`AppComponent should render 5 <app-nav-item> in order when 5 items are provided 1`] = `
<div
  id="root3"
  ng-version="18.2.7"
>
  <div
    class="min-h-screen flex flex-col"
  >
    <app-header>
      <section
        class="p-4 flex justify-center"
      >
        <div
          class="w-full space-y-4 flex flex-col justify-between items-center md:w-3/4 md:flex-row md:space-y-0"
        >
          <app-logo
            ng-reflect-vm="[object Object]"
          >
            <a
              href=""
            >
              <img
                alt="logo"
                class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
                src="assets/phoenix.jpg"
              />
            </a>
          </app-logo>
          <app-nav>
            <nav
              class="flex flex-col items-center space-y-4 text-center md:items-start md:flex-row md:space-y-0 md:space-x-10 md:text-left"
            >
              <app-nav-item
                ng-reflect-vm="[object Object]"
              >
                <a
                  class="sm:hover:text-gray-400 duration-150 cursor-pointer"
                  href=""
                  rel="null"
                  target="null"
                >
                  AppComponent.navItems.0.title
                </a>
              </app-nav-item>
              <app-nav-item
                ng-reflect-vm="[object Object]"
              >
                <a
                  class="sm:hover:text-gray-400 duration-150 cursor-pointer"
                  href=""
                  rel="null"
                  target="null"
                >
                  AppComponent.navItems.1.title
                </a>
              </app-nav-item>
              <app-nav-item
                ng-reflect-vm="[object Object]"
              >
                <a
                  class="sm:hover:text-gray-400 duration-150 cursor-pointer"
                  href=""
                  rel="null"
                  target="null"
                >
                  AppComponent.navItems.2.title
                </a>
              </app-nav-item>
              <app-nav-item
                ng-reflect-vm="[object Object]"
              >
                <a
                  class="sm:hover:text-gray-400 duration-150 cursor-pointer"
                  href=""
                  rel="null"
                  target="null"
                >
                  AppComponent.navItems.3.title
                </a>
              </app-nav-item>
              <app-nav-item
                ng-reflect-vm="[object Object]"
              >
                <a
                  class="sm:hover:text-gray-400 duration-150 cursor-pointer"
                  href=""
                  rel="null"
                  target="null"
                >
                  AppComponent.navItems.1.title
                </a>
              </app-nav-item>
              <!--container-->
              <button
                mat-icon-button=""
              >
                <mat-icon
                  aria-hidden="true"
                  class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
                  data-mat-icon-type="font"
                  role="img"
                >
                  logout
                </mat-icon>
              </button>
            </nav>
          </app-nav>
        </div>
      </section>
    </app-header>
    <!--container-->
    <div
      class="flex-grow"
    >
      <router-outlet />
      <!--container-->
    </div>
  </div>
</div>
`;
